atcUCI/HspfUci.ReachedEndOfJob: Retry checking if echo file could not be read the first time
atcMwGisUtility/GisUtil.ShapefileProjectionString: eliminated redundant call to New MapWinGIS.Shapefile

clsBatchSpec: made PopulateScenarios Shared
              commented out ParametersToTextBF whose entire body was already commented out
multiple: added setting InitialDirectory on common dialog if FileName includes an existing directory

DFLOW: start to handle possibility of more than one choice
       change fNonBioType into a list

D4EMDownloadData: changes to support SW Toolbox, be more tolerant of not having any map layers when downloading data

clsIDFPlugin: add 3 batch menus items instead of only one
                         open frmBatchMap even if no stations selected on map

frmSWSTAT: better names for new checkboxes
           fix errors caused by replacing radio buttons with checkboxes

BASINS/modDownload.vb: updated to use new data download method

--- a/BASINS40/atcIntegratedDesignFlow/atcIDF.vbproj
+++ b/BASINS40/atcIntegratedDesignFlow/atcIDF.vbproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{EF7A0A9B-E608-4C8E-938B-BD87DAA1D273}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -133,9 +133,11 @@
   <ItemGroup>
     <EmbeddedResource Include="frmBatch.resx">
       <DependentUpon>frmBatch.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmBatchMap.resx">
       <DependentUpon>frmBatchMap.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmDisplayFrequencyGrid.resx">
       <DependentUpon>frmDisplayFrequencyGrid.vb</DependentUpon>
@@ -147,6 +149,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmTrend.resx">
       <DependentUpon>frmTrend.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
