--- a/BASINS40/atcIntegratedDesignFlow/atcIDF.vbproj
+++ b/BASINS40/atcIntegratedDesignFlow/atcIDF.vbproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{EF7A0A9B-E608-4C8E-938B-BD87DAA1D273}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -110,6 +110,12 @@
     <Compile Include="frmSWSTAT.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmSWSTATDFlowBatch.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSWSTATmod.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmTrend.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +152,12 @@
     <EmbeddedResource Include="frmSWSTAT.resx">
       <DependentUpon>frmSWSTAT.vb</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSWSTATDFlowBatch.resx">
+      <DependentUpon>frmSWSTATDFlowBatch.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSWSTATmod.resx">
+      <DependentUpon>frmSWSTATmod.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTrend.resx">
       <DependentUpon>frmTrend.vb</DependentUpon>
