--- a/BASINS40/atcBatchProcessing/atcBatchProcessing15.vbproj
+++ b/BASINS40/atcBatchProcessing/atcBatchProcessing15.vbproj
@@ -128,6 +128,7 @@
     <Compile Include="frmStations.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="modUtil.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
