Minor edits to remove warnings
SWToolbox_15.sln: removed atcLandUse, atcLookup

clsDurationCompare: put these two items in Analysis menu instead of making SWSTAT sub-menu for just these two

clsIDFPlugin: Basic Attributes: replace ID with STAID and STANAM

atcGraphExperimental/atcGraph-D4EM10.vbproj: add clsGraphDoubleMass

--- a/BASINS40/atcGraphExperimental/atcGraph-D4EM10.vbproj
+++ b/BASINS40/atcGraphExperimental/atcGraph-D4EM10.vbproj
@@ -137,6 +137,7 @@
     <Compile Include="atcTimeseriesPointList.vb" />
     <Compile Include="clsGraphBase.vb" />
     <Compile Include="clsGraphCumulativeDifference.vb" />
+    <Compile Include="clsGraphDoubleMass.vb" />
     <Compile Include="clsGraphFrequency.vb" />
     <Compile Include="clsGraphProbability.vb" />
     <Compile Include="clsGraphResidual.vb" />
