Add new class clsBatchSpecDFLOW frmBatch, handles both SWSTAT and DFLOW batch run configurations and batch run frmBatchMap, handles both SWSTAT and DFLOW batch run configuration frmSWSTAT, handles DFLOW configuration setup for batch run

--- a/BASINS40/atcIntegratedDesignFlow/atcIDF15.vbproj
+++ b/BASINS40/atcIntegratedDesignFlow/atcIDF15.vbproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <Compile Include="atcFrequencyGridSource.vb" />
     <Compile Include="clsBatchSpec.vb" />
+    <Compile Include="clsBatchSpecDFLOW.vb" />
     <Compile Include="clsIDFPlugin.vb" />
     <Compile Include="DFLOWCalcs.vb" />
     <Compile Include="frmAboutDFLOW.Designer.vb">
