--- a/atcData/atcData-D4EM10.vbproj
+++ b/atcData/atcData-D4EM10.vbproj
@@ -242,6 +242,12 @@
     <Compile Include="frmSaveData.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmSelectAttributes.Designer.vb">
+      <DependentUpon>frmSelectAttributes.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmSelectAttributes.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmSelectData.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -294,6 +300,9 @@
     <EmbeddedResource Include="frmSaveData.resx">
       <SubType>Designer</SubType>
       <DependentUpon>frmSaveData.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSelectAttributes.resx">
+      <DependentUpon>frmSelectAttributes.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSelectData.resx">
       <DependentUpon>frmSelectData.vb</DependentUpon>
