--- a/atcTimeseriesBaseflow/atcTimeseriesBaseflow.vbproj
+++ b/atcTimeseriesBaseflow/atcTimeseriesBaseflow.vbproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{F9A4070C-1FAF-4D17-A8E6-7EB19D414B05}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -116,6 +116,7 @@
   <ItemGroup>
     <EmbeddedResource Include="atcChooseDataGroupDatesBF.resx">
       <DependentUpon>atcChooseDataGroupDatesBF.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
