--- a/BASINS40/atcTimeseriesBaseflow/atcTimeseriesBaseflow15.vbproj
+++ b/BASINS40/atcTimeseriesBaseflow/atcTimeseriesBaseflow15.vbproj
@@ -115,6 +115,7 @@
     <Compile Include="atcTimeseriesBaseflow.vb" />
     <Compile Include="clsBaseflow.vb" />
     <Compile Include="clsBaseflowBFI.vb" />
+    <Compile Include="clsBaseflowBFLOW.vb" />
     <Compile Include="clsBaseflowHySep.vb" />
     <Compile Include="clsBaseflowPart.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
