Add flags for the two new digital filter methods Activate PrintDataSummary routine to get the missing month listing

--- a/BASINS40/atcTimeseriesBaseflow/atcTimeseriesBaseflow15.vbproj
+++ b/BASINS40/atcTimeseriesBaseflow/atcTimeseriesBaseflow15.vbproj
@@ -114,6 +114,7 @@
     </Compile>
     <Compile Include="atcTimeseriesBaseflow.vb" />
     <Compile Include="clsBaseflow.vb" />
+    <Compile Include="clsBaseflow2PRDF.vb" />
     <Compile Include="clsBaseflowBFI.vb" />
     <Compile Include="clsBaseflowBFLOW.vb" />
     <Compile Include="clsBaseflowHySep.vb" />
