--- a/atcUCIForms/atcUCIForms15.vbproj
+++ b/atcUCIForms/atcUCIForms15.vbproj
@@ -55,6 +55,11 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="atcFtableBuilder, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\WinHSPF\bin\Debug\atcFtableBuilder.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
