--- a/atcUSGSBaseflow/atcUSGSBaseflow15.vbproj
+++ b/atcUSGSBaseflow/atcUSGSBaseflow15.vbproj
@@ -198,11 +198,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MapWinUtility\BASINS-MapWinUtility15.vbproj">
-      <Project>{3C991AE4-9EDB-4C24-BAF3-42F7303D7DF3}</Project>
-      <Name>BASINS-MapWinUtility</Name>
-      <Private>False</Private>
-    </ProjectReference>
     <ProjectReference Include="..\atcBatchProcessing\atcBatchProcessing15.vbproj">
       <Project>{7e95fcaa-7b7c-4585-8ee2-58db97ed9110}</Project>
       <Name>atcBatchProcessing15</Name>
@@ -210,47 +205,52 @@
     </ProjectReference>
     <ProjectReference Include="..\atcControls\atcControls15.vbproj">
       <Project>{B219575F-1541-41DB-9FA4-D9D7CD62B4A5}</Project>
-      <Name>atcControls</Name>
+      <Name>atcControls15</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcData\atcData15.vbproj">
       <Project>{A9A00CAD-9EAD-4228-AB08-6DC3BAF253AA}</Project>
-      <Name>atcData</Name>
+      <Name>atcData15</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcDurationCompare\atcDurationCompare15.vbproj">
-      <Project>{92EA3681-9EA9-438A-A598-2531F483A0C6}</Project>
-      <Name>atcDurationCompare</Name>
+      <Project>{FBAA545B-7D95-43A3-8A4F-CC664D7DB201}</Project>
+      <Name>atcDurationCompare15</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcGraphExperimental\atcGraph15.vbproj">
       <Project>{D52E1A9C-E219-4DF7-9CA8-B4FD1B28CEC9}</Project>
-      <Name>atcGraph</Name>
+      <Name>atcGraph15</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcTimeseriesBaseflow\atcTimeseriesBaseflow15.vbproj">
-      <Project>{F9A4070C-1FAF-4D17-A8E6-7EB19D414B05}</Project>
-      <Name>atcTimeseriesBaseflow</Name>
+      <Project>{f9a4070c-1faf-4d17-a8e6-7eb19d414b05}</Project>
+      <Name>atcTimeseriesBaseflow15</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcTimeseriesRDB\atcTimeseriesRDB15.vbproj">
-      <Project>{EA68C9C7-8A7A-4EDF-8944-413E4E7FA276}</Project>
-      <Name>atcTimeseriesRDB</Name>
+      <Project>{82530A5B-FF39-4B9F-8A04-881468DFC662}</Project>
+      <Name>atcTimeseriesRDB15</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcUSGSUtility\atcUSGSUtility15.vbproj">
       <Project>{4DBC8159-1072-41FA-9242-933E12A88EE6}</Project>
-      <Name>atcUSGSUtility</Name>
+      <Name>atcUSGSUtility15</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcUtility\atcUtility15.vbproj">
       <Project>{67027820-9036-481E-80F6-077E5085F59D}</Project>
-      <Name>atcUtility</Name>
+      <Name>atcUtility15</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\BASINS\GWToolbox15.vbproj">
       <Project>{37d44868-95ce-4a21-a43a-13e7e7f2ad09}</Project>
       <Name>GWToolbox15</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\MapWinUtility\BASINS-MapWinUtility15.vbproj">
+      <Project>{33E88992-742F-4D13-823F-35D6A07B1AA1}</Project>
+      <Name>BASINS-MapWinUtility15</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
