isolate download function in new project, atcD4EMLauncher

--- a/BASINS/BASINS15.vbproj
+++ b/BASINS/BASINS15.vbproj
@@ -111,7 +111,7 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MapWinUtility\BASINS-MapWinUtility15.vbproj">
+    <ProjectReference Include="MapWinUtility\BASINS-MapWinUtility15.vbproj">
       <Project>{33e88992-742f-4d13-823f-35d6a07b1aa1}</Project>
       <Name>BASINS-MapWinUtility15</Name>
       <Private>False</Private>
@@ -191,8 +191,6 @@
     <Compile Include="modDownload.vb">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Region.vb" />
-    <Compile Include="SpatialOperations.vb" />
     <EmbeddedResource Include="frmAbout.resx">
       <DependentUpon>frmAbout.vb</DependentUpon>
       <SubType>Designer</SubType>
