--- a/atcStatistics/atcStatistics15.vbproj
+++ b/atcStatistics/atcStatistics15.vbproj
@@ -106,21 +106,21 @@
       <Project>{33e88992-742f-4d13-823f-35d6a07b1aa1}</Project>
       <Name>BASINS-MapWinUtility15</Name>
     </ProjectReference>
-    <ProjectReference Include="..\atcControls\atcControls.vbproj">
-      <Name>atcControls</Name>
+    <ProjectReference Include="..\atcControls\atcControls15.vbproj">
+      <Name>atcControls15</Name>
       <Project>{B219575F-1541-41DB-9FA4-D9D7CD62B4A5}</Project>
       <Package>{F184B08F-C81C-45F6-A57F-5ABD9991F28F}</Package>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\atcData\atcData.vbproj">
-      <Name>atcData</Name>
+    <ProjectReference Include="..\atcData\atcData15.vbproj">
+      <Name>atcData15</Name>
       <Project>{A9A00CAD-9EAD-4228-AB08-6DC3BAF253AA}</Project>
       <Package>{F184B08F-C81C-45F6-A57F-5ABD9991F28F}</Package>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\atcUtility\atcUtility.vbproj">
+    <ProjectReference Include="..\atcUtility\atcUtility15.vbproj">
       <Project>{67027820-9036-481E-80F6-077E5085F59D}</Project>
-      <Name>atcUtility</Name>
+      <Name>atcUtility15</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
