Upgraded HSPEXP+ from VB10 to VB15. yaay Updated the startup form to load dates from the UCI file. The loaded dates can be used to limit the time period of BASINS HBN datasets. Still need to pass start/end dates to expert stats and other routines for budget and balance calculations.

--- a/HSPEXP/HSPEXP+-D4EM10.vbproj
+++ b/HSPEXP/HSPEXP+-D4EM10.vbproj
@@ -43,11 +43,11 @@
     <MapFileExtensions>false</MapFileExtensions>
     <TargetCulture>en</TargetCulture>
     <ProductName>HSPEXP+</ProductName>
-    <PublisherName>BASINS</PublisherName>
+    <PublisherName>AQUA TERRA Consultants %28a division of RESPEC%29</PublisherName>
     <WebPage>index.htm</WebPage>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.10.0.0</ApplicationVersion>
+    <ApplicationVersion>1.12.0.0</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
