--- a/atcGraphExperimental/atcGraph-D4EM10.vbproj
+++ b/atcGraphExperimental/atcGraph-D4EM10.vbproj
@@ -112,9 +112,8 @@
     <Reference Include="System.Windows.Forms">
       <Name>System.Windows.Forms</Name>
     </Reference>
-    <Reference Include="ZedGraph, Version=5.1.3.0, Culture=neutral, PublicKeyToken=02a83cbd123fcd60, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\D4EM\Bin\ZedGraph.dll</HintPath>
+    <Reference Include="ZedGraph">
+      <HintPath>..\Bin\ZedGraph.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
