Added a script called CookieCutterGraphs. Right now it is used for generating Regan plots, but it can be used for generating additional graphs. Added the option of Regan plots in StartUp form. Rearranged the form. Added tooltips on the form to better guide a new user.

--- a/HSPEXP/HSPEXP+-D4EM10.vbproj
+++ b/HSPEXP/HSPEXP+-D4EM10.vbproj
@@ -124,6 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationEvents.vb" />
+    <Compile Include="CookieCutterGraphs.vb" />
     <Compile Include="HelpForm.Designer.vb">
       <DependentUpon>HelpForm.vb</DependentUpon>
     </Compile>
