atcHspcWatershedConstituentBalance.vb 1. Calling report function with the start and end dates of the analysis. 2. The location reports were not showing inidividual components like rainfall, surface runoff etc. That bug has been fixed.

--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,7 @@
 /WinHSPF/logs
 /WinHSPF/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 /WinHSPF/obj/x86/Debug
+/atcD4EMLauncher/obj
+/.vs/WinHSPF_15/v14/.suo
+/atcMetCmp/obj/Debug/atcMetCmp.xml
+/BASINS/BASINS15.vbproj.user
