Loading Rate Report Added an additional report that provides summary of loading rates by each landuse and then provides, mean, min, and max for each landuse.

--- a/atcHspfSupport/atcHspfSupport-D4EM10.vbproj
+++ b/atcHspfSupport/atcHspfSupport-D4EM10.vbproj
@@ -118,6 +118,7 @@
     </Compile>
     <Compile Include="modAnnualCompareStats.vb" />
     <Compile Include="modGraph.vb" />
+    <Compile Include="modGraphBoxWhiskers.vb" />
     <Compile Include="modMonthlyAverageCompareStats.vb" />
     <Compile Include="modUtility.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
