Added constants as Unit Conversation factors. Used the unit conversion factors in several other places instead of numbers. The attribute tables generated in manual delineation process now contain unit names for fields. The HSPF model creation wizard was updated for new unit names. Changed code at some places so that the addition of new field in attribute tables is simplified.

--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,8 @@
 *.hhk
 *.hhp
 *.hhc
+/Doc/HSPEXP/HSPEXP+1.11.pdf
+/Doc/HSPEXP/Introduction/respec_black.jpg
+*.log
+/HSPEXP/pest13
+/HSPEXP/SplashScreenHSPEXP_Nov2016.png
