Added Load Duration Curve for Total P. If hydrualics and PLANK are at daily or shorter interval, then the load duration curves are generated. Right now the addumed RES limit is 0.5mg/l, but we may have to change it to provide it dynamically.

--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,16 @@
 *.hhk
 *.hhp
 *.hhc
+/HSPEXP/pest13/modules
+/HSPEXP/pest13/papestex
+/HSPEXP/pest13/pestex
+/HSPEXP/pest13/ppestex
+/HSPEXP/pest13/edpestex
+/HSPEXP/pest13/doc
+/HSPEXP/pest13
+/HSPEXP/bin/x86/Debug/atcEvents.dll
+/HSPEXP/bin/x86/Debug/atcEvents.pdb
+/HSPEXP/bin/x86/Debug/atcEvents.xml
+/HSPEXP/bin/x86/Debug/atcSynopticAnalysis.dll
+/HSPEXP/bin/x86/Debug/atcSynopticAnalysis.pdb
+/HSPEXP/bin/x86/Debug/atcSynopticAnalysis.xml
