--- a/atcHspfSupport/atcHspfSupport-D4EM10.vbproj
+++ b/atcHspfSupport/atcHspfSupport-D4EM10.vbproj
@@ -87,6 +87,9 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="atcSynopticAnalysis">
+      <HintPath>..\bin\Plugins\BASINS\atcSynopticAnalysis.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
