Implemented recession constant estimation clsBaseflow2PRDF: two static variables to hold estimated RC and BFImax; frmDF2P: implement RC estimation

--- a/atcUSGSDF2P/atcUSGSDF2P15.vbproj
+++ b/atcUSGSDF2P/atcUSGSDF2P15.vbproj
@@ -157,6 +157,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\atcTimeseriesBaseflow\atcTimeseriesBaseflow15.vbproj">
+      <Project>{f9a4070c-1faf-4d17-a8e6-7eb19d414b05}</Project>
+      <Name>atcTimeseriesBaseflow15</Name>
+      <Private>False</Private>
+    </ProjectReference>
     <ProjectReference Include="..\MapWinUtility\BASINS-MapWinUtility15.vbproj">
       <Project>{33E88992-742F-4D13-823F-35D6A07B1AA1}</Project>
       <Name>BASINS-MapWinUtility15</Name>
