Mostly vanity changes.

--- a/.gitignore
+++ b/.gitignore
@@ -274,3 +274,34 @@
 /atcUSGSBaseflow/obj/x86/Debug
 /Doc/HSPEXP/Introduction/respec_black.jpg
 /Doc/HSPEXP/log
+/RunR/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+/.vs/SWToolbox_15/v14
+/Doc/HSPEXP/HSPEXP+1.11.pdf
+/.vs/config/applicationhost.config
+/HSPEXP/bin/x86/Debug/atcBatchProcessing.dll
+/HSPEXP/bin/x86/Debug/atcBatchProcessing.pdb
+/HSPEXP/bin/x86/Debug/atcBatchProcessing.xml
+/HSPEXP/bin/x86/Debug/atcD4EMLauncher.dll
+/HSPEXP/bin/x86/Debug/atcD4EMLauncher.pdb
+/HSPEXP/bin/x86/Debug/atcD4EMLauncher.xml
+/HSPEXP/bin/x86/Debug/atcTimeseriesBaseflow.dll
+/HSPEXP/bin/x86/Debug/atcTimeseriesBaseflow.pdb
+/HSPEXP/bin/x86/Debug/atcTimeseriesBaseflow.xml
+/HSPEXP/bin/x86/Debug/atcTimeseriesRDB.dll
+/HSPEXP/bin/x86/Debug/atcTimeseriesRDB.pdb
+/HSPEXP/bin/x86/Debug/atcTimeseriesRDB.xml
+/HSPEXP/bin/x86/Debug/atcUSGSBaseflow.dll
+/HSPEXP/bin/x86/Debug/atcProjector.dll
+/HSPEXP/bin/x86/Debug/atcProjector.xml
+/HSPEXP/bin/x86/Debug/atcProjector.pdb
+/HSPEXP/bin/x86/Debug/atcUSGSUtility.xml
+/HSPEXP/bin/x86/Debug/atcUSGSUtility.pdb
+/HSPEXP/bin/x86/Debug/atcUSGSUtility.dll
+/HSPEXP/bin/x86/Debug/atcUSGSBaseflow.xml
+/HSPEXP/bin/x86/Debug/atcUSGSBaseflow.pdb
+/HSPEXP/bin/x86/Debug/MapWinInterfaces.dll
+/HSPEXP/bin/x86/Debug/Interop.MapWinGIS.xml
+/HSPEXP/bin/x86/Debug/Interop.MapWinGIS.dll
+/HSPEXP/bin/x86/Debug/GWToolbox.xml
+/HSPEXP/bin/x86/Debug/GWToolbox.pdb
+/HSPEXP/bin/x86/Debug/GWToolbox.dll
