--- a/WinHSPF/WinHSPF15.vbproj
+++ b/WinHSPF/WinHSPF15.vbproj
@@ -72,6 +72,9 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="atcList">
+      <HintPath>..\bin\Plugins\BASINS\atcList.dll</HintPath>
+    </Reference>
     <Reference Include="MapWinInterfaces, Version=4.8.6.42296, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Bin\MapWinInterfaces.dll</HintPath>
