--- a/HSPEXP/HSPEXP+-D4EM10.vbproj
+++ b/HSPEXP/HSPEXP+-D4EM10.vbproj
@@ -91,6 +91,12 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="atcUSGSBaseflow">
+      <HintPath>..\bin\Plugins\BASINS\atcUSGSBaseflow.dll</HintPath>
+    </Reference>
+    <Reference Include="MapWinUtility">
+      <HintPath>..\bin\Plugins\BASINS\MapWinUtility.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
@@ -218,10 +224,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MapWinUtility\MapWinUtility-D4EM10.vbproj">
-      <Project>{3C991AE4-9EDB-4C24-BAF3-42F7303D7DF3}</Project>
-      <Name>MapWinUtility-D4EM10</Name>
-    </ProjectReference>
     <ProjectReference Include="..\atcBasinsObsWQ\atcBasinsObsWQ-D4EM10.vbproj">
       <Project>{7DCB47A0-7B03-4B7C-BC42-B8D920D46604}</Project>
       <Name>atcBasinsObsWQ-D4EM10</Name>
